# multi-pride

./: bert_baseline.ipynb  hurtlex_IT.csv  hurtlex_analysis.ipynb  logistic_regression.ipynb  main.py  pyproject.toml  set_fit.ipynb  tsv2csv.py  utils.py
data_sources/: data_en.csv  data_es.csv  data_it.csv
data_sources/test/: test_en.csv  test_es.csv  test_it.csv
data_sources/train/: train_en.csv  train_es.csv  train_it.csv
error_analysis/bert_baseline/: false_negatives_it.csv  false_positives_it.csv
error_analysis/logistic_regression/: false_negatives_it.csv  false_positives_it.csv
error_analysis/set_fit_pipeline/: false_negatives_it.csv  false_positives_it.csv
